--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/images/numbers/
+    - assets/images/colors/
+    - assets/images/family_members/
     - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
